public class Brewery extends Property{
    public Brewery(int ID, String label, int cost, int income, int seriesID) {
        super(ID, label, cost, income, seriesID);
    }
}
