public class Chance extends Field {
    public Chance(int id, String label, int income, int cost) {
        super(id,label,0,0);
    }
}
