public interface IOption {

    String onAccept(Player player);

    String onReject(Player player);



}
