public class Parking extends Field {
    public Parking(int id, String label, int income, int cost) {
        super(id, label, 0,0);
    }
}
