public class ShippingLine extends Property{
    public ShippingLine(int ID, String label, int cost, int income, int seriesID) {
        super(ID, label, cost, income, seriesID);
    }
}
