public class Start extends Field{

    private int ID;
    private String label;
    private int income;

    public Start(int ID, String label, int income){
        this.ID = ID;
        this.label = label;
        this.income = income;
    }
}
