public class Visit extends Field {
    public Visit(int id, String label, int income, int cost) {
        super(id,label,0,0);
    }
}
